# learning_python_tdd

./: .coverage  .gitignore  README.md
1_modern_python_env/flask_example/: app.py  pyproject.toml  test_app.py
1_modern_python_env/sample-project/: pyproject.toml
2_testing_python/: .mutmut-cache
2_testing_python/mutation_test/: .mutmut-cache  pyproject.toml
2_testing_python/mutation_test/mutation_test/: loan.py  reject_loan.py
2_testing_python/mutation_test/tests/test_loan/: __init__.py  test_reject_loan.py
3_modern_tdd_python/: README.md  database.db
3_modern_tdd_python/blog/: app.py  commands.py  init_db.py  models.py  queries.py
3_modern_tdd_python/sum/: __init__.py  another_sum.py
3_modern_tdd_python/tests/: pytest.ini
3_modern_tdd_python/tests/test_article/: test_app.py  test_queries.py
3_modern_tdd_python/tests/test_article/schemas/: Article.json  ArticleList.json
4_python_code_quality/flask_example/: .pre-commit-config.yaml  app.py  pyproject.toml  test_app.py
4_python_code_quality/flask_example/.github/workflows/: main.yaml
4_python_code_quality/linter/: my_module.py
blog/: app.py  models.py
tests/: conftest.py  pytest.ini
tests/test_article/: test_commands.py
tests/test_sum/: test_another_sum.py
