[tool.poetry]
name = "flask_example"
version = "0.1.0"
description = ""
authors = ["Otakenz <e0318537@u.nus.edu>"]

[tool.poetry.dependencies]
python = "3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
